--- a/foot/style.css
+++ b/foot/style.css
@@ -3,14 +3,14 @@ body {
     font-family: sans-serif;
     text-align: center;
     background-color: #ffffff;
-  }
+}
   
-  h2 {
+h2 {
     margin-top: 40px;
     margin-bottom: 20px;
-  }
+}
   
-  .field {
+.field {
     width: 720px;
     height: 220px;
     background-color: #5ABB58;
@@ -19,7 +19,8 @@ body {
     border-radius: 37px;
     position: relative;
     overflow: hidden;
-  }
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3); /* кнопка з тінню */
+}
   
   .ball {
     position: absolute;
@@ -27,6 +28,6 @@ body {
     height: 50px;
     top: 85px;
     left: 50px;
-    transition: top 0.2s linear, left 0.2s linear;
-  }
+    transition: top 0.1s linear, left 0.1s linear;
+}
   
