--- a/lodash/style.css
+++ b/lodash/style.css
@@ -1,8 +1,8 @@
-.section {
+/* .section {
   padding-top: 40px;
   padding-bottom: 40px;
 }
 
 .completed {
     text-decoration: line-through;
-}
+} */
